# aztea

./: .env.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  GEMINI.md  INTERESTING_IDEAS.md  LICENSE  Makefile  NOTICE  PRODUCT.md  README.md  SECURITY.md  TODO.md  agent.md  agent_codereview.py  auth.py  client.py  docker-compose.postgres.yml  docker-compose.prod.yml  docker-compose.yml  fetcher.py  fly.toml  logger.py  main.py  openapi.json  payments.py  pyproject.toml  registry.db-shm  registry.db-wal  registry.py  requirements-dev.in  requirements-dev.txt  requirements.in  (+6 more)
.agents/: TODO.md
.claude/: settings.json  settings.local.json
.codex/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md
agents/: _contracts.py  _html_extract.py  _kev_feed.py  _manifest_parsing.py  _reasoning_scaffold.py  _site_fetch.py  _web_interact.py  accessibility_auditor.py  adversarial_red_teamer.py  ai_code_provenance_stamp.py  ai_red_teamer.py  archive_inspector.py  arxiv_research.py  author_style_reviewer.py  bisect_and_blame.py  broken_link_crawler.py  browser_agent.py  changelog_agent.py  ci_failure_reproducer.py  codebase_reviewer.py  codereview.py  color_contrast_checker.py  compliance_attestor.py  coverage_runner.py  cron_expression_parser.py  cve_lookup.py  datainsights.py  db_sandbox.py  dependency_auditor.py  dependency_scanner.py  deploy_canary_pilot.py  dmarc_email_verifier.py  dns_inspector.py  dockerfile_analyzer.py  docs_grounder.py  email_deliverability_checker.py  emailwriter.py  flake_hunter.py  fuzz_and_find.py  git_diff_analyzer.py  (+62 more)
core/: action_mandates.py  auth.py  builder_profiles.py  cache.py  compare.py  copilot_predicates.py  credential_vault.py  crypto.py  db.py  deferred.py  disputes.py  domain_proof.py  email.py  embeddings.py  error_codes.py  executor_sandbox.py  fastpath.py  feature_flags.py  functional.py  hosted_client.py  hosted_execution_log.py  hosted_skills.py  idempotency.py  identity.py  integrations_cache.py  jobs.py  judges.py  listing_council.py  listing_council_prompts.py  listing_dedup.py  listing_probe_core.py  listing_reliability.py  listing_safety.py  listing_safety_judge.py  listing_safety_probe.py  listing_value_add.py  listing_verification.py  logger.py  logging_utils.py  mcp_manifest.py  (+36 more)
docs/: agent-builder.md  api-reference.md  auth-and-billing.md  auth-onboarding.md  aztea-tui.md  claude-code-power-user.md  claude-md-global-snippet.md  cli.md  errors.md  future-features.md  idempotency.md  identity-verification.md  mcp-integration.md  orchestrator-guide.md  oss-vs-hosted.md  otto-proxy.md  otto-telemetry-schema.md  privacy-policy.md  quickstart.md  rate-limits.md  reputation.md  skill-md-reference.md  stripe-setup.md  terms-of-service.md  verification-contracts.md  voice.md  webhooks.md  workspaces.md
elixir/: aztea-elixir.service  mix.exs
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
integrations/: README.md
migrations/: 0001_initial.sql  0002_stripe_connect.sql  0003_callback_url.sql  0005_agent_model_columns.sql  (+82 more)
sdk/: README.md  pyproject.toml  setup.py
sdk/agentmarket/: __init__.py  agent.py  client.py  exceptions.py  models.py
sdk/tests/: test_agent_server.py  test_client.py
sdks/anthropic-agents/: README.md  pyproject.toml
sdks/anthropic-agents/notebooks/: hello.ipynb
sdks/anthropic-agents/src/aztea_anthropic/: __init__.py  _factory.py
sdks/anthropic-agents/tests/: test_load_tools.py
sdks/langchain/: README.md  pyproject.toml
sdks/langchain/notebooks/: hello.ipynb
sdks/langchain/src/aztea_langchain/: __init__.py  _factory.py
sdks/langchain/tests/: test_load_tools.py
sdks/python/: README.md  pyproject.toml
sdks/python-sdk/: LICENSE  README.md  pyproject.toml  setup.py
sdks/python-sdk/agentmarket/: __init__.py  agent.py  client.py
sdks/python-sdk/aztea/: __init__.py  _listing_safety.py  agent.py  async_client.py  cli.py  client.py  config.py  errors.py  exceptions.py  jobs.py  models.py  results.py  sandbox.py  verify.py  workers.py
sdks/python-sdk/aztea/_client_internals/: _polling.py  _verify.py  client_core.py  namespaces.py
sdks/python-sdk/aztea/cli/: __init__.py  _agents_cache.py  _detect.py  agents.py  auth.py  common.py  deference_core.py  dispute.py  dispute_wizard.py  help_text.py  init.py  jobs.py  mcp.py  mcp_codex.py  mcp_config_io.py  mcp_hermes.py  mcp_hooks.py  output.py  pipelines.py  prompts.py  publish.py  splash.py  status.py  wallet.py  watchers.py  wizard.py  wrapper.py
sdks/python-sdk/aztea/cli/repl/: __init__.py  app.py  ask.py  commands.py  completer.py  login_modal.py  prompt.py  register_modal.py
sdks/python-sdk/aztea/cli/templates/: agent_md.template  handler_py.template  skill_md.template
sdks/python-sdk/aztea/mcp/: __init__.py  copilot_tools.py  manifest.py  meta_tools.py  publish_tool.py  server.py
sdks/python-sdk/tests/: _dispute_helpers.py  conftest.py  test_agent_server.py  test_async_client.py  test_cli.py  test_cli_dispute.py  test_cli_dispute_classification.py  test_cli_dispute_errors.py  test_cli_dispute_robustness.py  test_cli_dispute_wizard.py  test_cli_redesign.py  test_cli_repl.py  test_cli_repl_errors.py  test_cli_splash.py  test_client.py  test_error_hints.py
sdks/python/agentmarket/: __init__.py  client.py  errors.py  jobs.py  messages.py  types.py  workers.py
sdks/python/aztea/: __init__.py  _shim.py  agent.py  async_client.py  client.py  errors.py  jobs.py  messages.py  models.py  types.py  workers.py
sdks/python/examples/: agent_to_agent.py
tui/: README.md  install.sh  pyproject.toml
tui/aztea_tui/: __main__.py  api.py  app.py  aztea.tcss  config.py  constants.py
tui/aztea_tui/screens/: login.py  main.py
tui/aztea_tui/views/: agents.py  jobs.py  my_agents.py  wallet.py
tui/aztea_tui/widgets/: __init__.py  header_bar.py  hire_modal.py  live_job.py  recent_jobs.py
tui/homebrew/: aztea-tui.rb
tui/npm/: package.json
tui/npm/scripts/: postinstall.js
tui/tests/: test_api_adapter.py  test_config.py
(+1050 files in other folders)
