[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentmarket"
version = "1.0.0"
description = "Python SDK for the AgentMarket AI agent marketplace"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Anay Garodia" }]
requires-python = ">=3.10"
keywords = ["ai", "agent", "marketplace", "llm", "automation", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3"]

[project.urls]
Homepage = "https://github.com/AnayGarodia/agentmarket"
Documentation = "https://github.com/AnayGarodia/agentmarket/blob/main/docs/quickstart.md"
Source = "https://github.com/AnayGarodia/agentmarket"
Issues = "https://github.com/AnayGarodia/agentmarket/issues"

[tool.setuptools.packages.find]
exclude = ["tests*"]
