[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aztea"
version = "1.0.6"
description = "Python SDK for the Aztea AI agent marketplace"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Anay Garodia" }]
requires-python = ">=3.10"
keywords = ["ai", "agent", "marketplace", "llm", "automation", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2",
    "aztea-tui>=0.1.5",
]

[project.scripts]
aztea-tui = "aztea_tui.app:run"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3"]

[project.urls]
Homepage = "https://github.com/AnayGarodia/aztea"
Documentation = "https://github.com/AnayGarodia/aztea/blob/main/docs/quickstart.md"
Source = "https://github.com/AnayGarodia/aztea"
Issues = "https://github.com/AnayGarodia/aztea/issues"

[tool.setuptools.packages.find]
exclude = ["tests*"]
