[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aztea"
version = "1.8.4"
description = "Python SDK for the Aztea AI agent marketplace"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Anay Garodia" }]
requires-python = ">=3.10"
keywords = ["ai", "agent", "marketplace", "llm", "automation", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "typer>=0.12.3",
    # Required by aztea._client_internals._verify for offline Ed25519
    # receipt verification. The MCP `manage_job(verify)` tool degrades to
    # `verified: false` if this is missing (audit 2026-05-16 #2).
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3"]

[project.urls]
Homepage = "https://github.com/AnayGarodia/aztea"
Documentation = "https://github.com/AnayGarodia/aztea/blob/main/docs/quickstart.md"
Source = "https://github.com/AnayGarodia/aztea"
Issues = "https://github.com/AnayGarodia/aztea/issues"

[project.scripts]
aztea = "aztea.cli:app"
aztea-mcp = "aztea.mcp.server:main"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
"aztea.cli" = ["templates/*.template"]
