[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmarket"
version = "0.1.0"
description = "Ergonomic Python SDK for the AgentMarket API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["agentmarket*"]

[tool.mypy]
strict = true
python_version = "3.10"
pretty = true
show_error_codes = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true
